--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <header>
     <img src="assets/logo.png" alt="Logo" class="logo" />
     <h1>Anand Ice Cream Menu</h1>
+    <p class="tagline">Cool treats, warm smiles 🍨</p>
   </header>
+
+  <div id="loader" class="loader">
+    <img src="assets/loader.gif" alt="Loading..." />
+  </div>
 
   <section id="menu-grid" class="menu-grid"></section>
 
@@ -23,7 +28,7 @@
   </div>
 
   <footer>
-    <p>Enjoy your visit! 🍨</p>
+    <p>Enjoy your visit! 😊</p>
   </footer>
 
   <script src="script.js"></script>
