--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </div>
   </div>
 
+  <img src="assets/cone.gif" class="floating-gif cone" alt="Cone GIF" />
+  <img src="assets/stickice.gif" class="floating-gif stick" alt="Stick Ice GIF" />
+
   <footer>
     <p>Enjoy your visit! 😊</p>
   </footer>
