--- a/index.html
+++ b/index.html
@@ -30,21 +30,17 @@
       box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
     }
 
-    .gradient-bg {background: linear-gradient(135deg, #fff9c4 0%, #ffe082 100%);}
+    .gradient-bg {background: linear-gradient(to right, #FFF176, #FFD700); /* Lemon yellow to golden yellow */}
     .ice-cream-bg { background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #fecfef 100%); }
   </style>
 </head>
 <body class="min-h-screen ice-cream-bg">
 
   <!-- Header -->
-  <header class="gradient-bg py-8 px-4 shadow-2xl">
+  <header class="gradient-bg py-4 px-4 shadow-2xl">
   <div class="max-w-6xl mx-auto text-center">
     <img src="assets/logo.png" alt="Anand Ice Cream Logo" class="mx-auto w-32 h-24 mb-4 float-animation" />
     <p class="text-xl header-text">Delicious frozen treats made with love</p>
-    <div class="mt-4 flex justify-center items-center space-x-2">
-      <center><img src="assets/loader.gif" alt="Loading..." class="w-9 h-9" />
-      <span class="ml-3 text-sm header-text">Digital Menu</span></center>
-    </div>
   </div>
 </header>
 
