--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 
     .header-text {
-     font-weight: 600;
+     font-weight: 700;
      color: #6b21a8;
     }
 
@@ -45,7 +45,7 @@
   <header class="gradient-bg py-4 px-4 shadow-2xl">
     <div class="max-w-6xl mx-auto text-center">
       <img src="assets/logo.png" alt="Anand Ice Cream Logo" class="mx-auto w-32 h-24 mb-4 float-animation" />
-      <p class="text-xl header-text">Delicious frozen treats made with love</p>
+      <p class="text-xl header-text">Cool treats. Warm hearts.</p>
     </div>
   </header>
 
