--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         card.innerHTML = `
           <div class="text-center">
-            <img src="${category.image}" alt="${category.name}" class="w-full h-32 object-cover rounded-xl mb-4" />
+            <img src="${category.imageUrl}" alt="${category.name}" class="w-full h-32 object-cover rounded-xl mb-4" />
             <h3 class="text-xl font-semibold text-gray-800">${category.name}</h3>
             <div class="mt-4 bg-gradient-to-r from-purple-500 to-pink-500 text-white py-2 px-4 rounded-full text-sm font-medium">
               View Menu
