--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <!-- Categories Section -->
     <section class="mb-12" id="categoriesSection">
       <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Our Categories</h2>
+      <p id="noCategoriesMessage" class="text-center text-gray-500 text-lg hidden mb-6">No categories added yet</p>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6" id="categoriesGrid"></div>
     </section>
 
@@ -65,6 +66,7 @@
           ← Back to Categories
         </button>
       </div>
+      <p id="noItemsMessage" class="text-center text-gray-500 text-lg hidden mb-6">No items added yet.</p>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="itemsGrid"></div>
     </section>
   </main>
@@ -100,6 +102,12 @@
     function loadCategories() {
       const grid = document.getElementById('categoriesGrid');
       grid.innerHTML = '';
+      const noCatMsg = document.getElementById('noCategoriesMessage');
+if (categoriesData.length === 0) {
+  noCatMsg.classList.remove('hidden');
+} else {
+  noCatMsg.classList.add('hidden');
+}
 
       categoriesData.forEach((category, index) => {
         const card = document.createElement('div');
@@ -141,6 +149,13 @@
 
         const itemsGrid = document.getElementById('itemsGrid');
         itemsGrid.innerHTML = '';
+        const noItemMsg = document.getElementById('noItemsMessage');
+if (items.length === 0) {
+  noItemMsg.classList.remove('hidden');
+} else {
+  noItemMsg.classList.add('hidden');
+}
+
         const items = itemsData[categoryName] || [];
 
         items.forEach((item, index) => {
